--- a/MeetingNotes/20180912.md
+++ b/MeetingNotes/20180912.md
@@ -7,7 +7,7 @@ Minutes
 •	Kuldar Aas (National Archives of Estonia)
 •	Janet Anderson (University of Brighton)
 •	Gregor Zavrsnik (Geoarh)
-•	Ane Hovden (?)
+•	Ane Hovden (National Archives of Norway)
 •	Sven Schlarb (Austrian Institute of Tehnology)
 •	Karin Oolu (DLM)
 •	Carl Wilson (A3, OPF)
@@ -17,9 +17,9 @@ All agree on that.
 MF repeats that OTHER and MIXED are very different concepts. OTHER means not controlled vocabulary. MIXED means we have several content types mixed together in the same representation. It may be a huge mixed package and we have no idea what’s inside of it. ABN, SS gives examples and discusses how to validate if the content will be mixed later. That is why we should have this attribute on the level of representation, not in the level of package. Validation is done per file. 
 KB explains that in the CS-IP we state that we can use type CONTENTTYPESPEC, but we do not give any value list on the higher level, we want that to be closer to the content itself. In the Profile for SIP, AIP, DIP we need to say how to do that. KB shows where exactly in the METS we state that this particular package, for example, is for AIP.  MF: we need an attribute what says what kind of content type we have in the package,  e.g database, and we have to have an extension point, like smth else that is not in the vocabulary and we call it that. Mixed types means, that once the package is mixed, everything is mixed. 
 KB renews this document so it is easier to discuss further. Agreed by all. 
-- Struct map. KB shows simple example of StructMap full xml. Struct map is the only mandatory element in METS. The problem is that we need to state if you don’t have the suggested folder structure you need to do this or you need to do it on the file section. Which of the options are possible to validate? Several questions discussed about struct map technical details, use cases were analysed, also validation details. Q left open either relative or absolute, we haven’t got any agreement.
-KB and KA will rebuild the struct map. 
-- Recap: KB is going to update the document what was agreed in regards to @CONTENTTYPE and continue to simplify the struct map 
+- Struct map. KB shows simple example of StructMap full xml. Struct map is the only mandatory element in METS. The problem is that we need to state if you don’t have the suggested folder structure you need to do this or you need to do it on the file section. Which of the options are possible to validate? Several questions discussed about struct map technical details, use cases were analysed, also validation details. Q left open either relative or absolute links, we haven’t got any agreement.
+KB and KA will rebuild new examples of the struct map. 
+- Recap: KB is going to update the document what was agreed in regards to @CONTENTTYPESPECIFICATION and continue to simplify the struct map 
 - CW Q about specification versions. KB: the first version we are going to give out to DILCIS board is going to be version 2. KA eark final version will be 1.0 . I also prefer 2 and 0. MF suggests to think about how we change versions. By the Vieanna meeting in Nov Istvan is intending to come up with the release planning document, with minor or major versions of impact. 
-3.	Next meeting Sep 19th. After that there will be iPRES in Boston. 
+3.	Next meeting Sep 19th. After that there will be iPRES in Boston so Karin will be unavailable. 
 - Notes by: Karin Oolu
