--- a/MeetingNotes/20180919.md
+++ b/MeetingNotes/20180919.md
@@ -23,6 +23,5 @@ KB updates the new version of the document. MF suggest to share the document in 
 - No meeting next week due to iPRES in Boston. ABN have created issues in GH, but these can wait 14 days. KB is back by the meeting on Oct 3rd. 
 ABN didn’t know where to put his sample METS file, KB haven’t had time to discuss it with Carl. ABN keeps working with issues next 14 days, sends KB the list of all issues and it will be discussed on the next meeting. 
 GZ can’t open the tutorial link. 
-3.	Next meeting 
-- DILCIS board + A2 on Oct 3rd. 
+3.	Next meeting: DILCIS board + A2 on Oct 3rd. 
 -	Notes by: Karin Oolu
