--- a/MeetingNotes/20181003.md
+++ b/MeetingNotes/20181003.md
@@ -48,7 +48,7 @@ KB writes a comment that implementation guide will be developed some time and wi
 - g. https://github.com/DILCISBoard/E-ARK-CSIP/issues/130
 IP with no representation -  have been discussed earlier. 
 
-- 4. Terminology - root level and representational level (Anders Bo)
+4. Terminology - root level and representational level (Anders Bo)
 ABN explains that its just to explain to people. It comes at the glossary, or explanation in CSIP. 
 
 - Sum up: ABN updates issue nr 4, KB sends one mail for each thing to make it easier to solve. 
