--- a/MeetingNotes/20181003.md
+++ b/MeetingNotes/20181003.md
@@ -52,4 +52,4 @@ IP with no representation -  have been discussed earlier.
 ABN explains that its just to explain to people. It comes at the glossary, or explanation in CSIP. 
 
 - Sum up: ABN updates issue nr 4, KB sends one mail for each thing to make it easier to solve. 
-- 5. Next meeting
+5. Next meeting
