--- a/MeetingNotes/20181023.md
+++ b/MeetingNotes/20181023.md
@@ -19,9 +19,7 @@ Minutes
 1.	Issue #140 in GH. There have been some discussion going on, the difference in the wording "and its components" between CSIPSTR4 and CSIPSTR12. PT comments the issue. Specification is not clear how to understand it correctly and what kind of information we should put where (lower level or representation level METS). If we have several METS files we should always know where to put what. Discussion on moving and rephrasing text. 
 Decision: PT will write no 4 and 12 new comment to the issue as suggestion; KB sends out the note (with recording) and asks objections, deadline by Friday. 
 
-2.	Discussion about work plan for further actions for the next 5 weeks we have until the review in Vienna. KB introduces the draft of the agenda, can be found from Drive. 
-
-GZ Q if we have a guideline of extent number of possible archival values? Producers say the archival format is not enough for them. KB: we aren’t going to make it this year, we need to figure out how this process should be done. 
+2.	Discussion about work plan for further actions for the next 5 weeks we have until the review in Vienna. KB introduces the draft of the agenda, who is responsible of what. Document can be found from Drive. GZ Q if we have a guideline of extent number of possible archival values? Producers say the archival format is not enough for them. KB: we aren’t going to make it this year, we need to figure out how this process should be done. 
 KB creates special folder for geo joint document and other uploads. 
 
-- Recap: KB will mail the text where all responsible  needs to update the text what can be reviewed and discussed next meeting.  KB creates folder for things prepared for review. 
+- Recap: KB will mail the text where all, who are responsible, needs to update the text according to what can be reviewed by the deadline after 5 weeks. KB creates folder for things prepared for review. 
