--- a/MeetingNotes/20183110.md
+++ b/MeetingNotes/20183110.md
@@ -1,6 +1,6 @@
 Minutes 
 
-Attendees: 
+- Attendees: 
 •	Karin Bredenberg (National Archives of Sweden, chair)
 •	Anders Bo Nielsen (National Archives of Denmark)
 •	Miguel Ferreira (KEEP Solutions)
@@ -11,9 +11,9 @@ Attendees:
 •	Carl Wilson (A3, OPF)
 
 
-1. Reviewing test corpus will be postponed to the next meeting, materials will be sent by Monday to everyone. CW comments work done regarding test corpus this far. Next meeting we are going to do a fake review to list of 17 structural cases. 
+- 1. Reviewing test corpus will be postponed to the next meeting, materials will be sent by Monday to everyone. CW comments work done regarding test corpus this far. Next meeting we are going to do a fake review to list of 17 structural cases. 
 
-2. Planning of the work. Time we have left to review is 3 weeks and we have lot to do. 
+- 2. Planning of the work. Time we have left to review is 3 weeks and we have lot to do. 
 Review process needs to be created: introduction that can be published on web page, also create a survey etc. Work is going on with it by KB and JK.
 
 Discussion of tasks and work plan shared in Drive:
@@ -26,4 +26,4 @@ JA Q about Norwegian review on ERMS schema. KB have set the deadline for the nex
 GEODATA – GZ comments that the document is in some shape, content is in there – can be reviewed. Gregor and KB will have separate meeting next week to discuss more detailed what we are going to have for the review.
 SIARD - we could test getting approval for endorsement, needs to be discussed with KO from Swiss Federal Archives. 
 
-Recap: Separate meetings will be agreed with ABN and GZ. JA offers her help as she is available next week. Agenda for meeting with Manuela is set next Monday and KB will circulate what they will come up with ambition and how we need to change our focus. CSIP and RM are the most important thing and lets focus on them. Next week CW will aid us and guides us what he expects us to do. 
+- Recap: Separate meetings will be agreed with ABN and GZ. JA offers her help as she is available next week. Agenda for meeting with Manuela is set next Monday and KB will circulate what they will come up with ambition and how we need to change our focus. CSIP and RM are the most important thing and lets focus on them. Next week CW will aid us and guides us what he expects us to do. 
