--- a/MeetingNotes/20183110.md
+++ b/MeetingNotes/20183110.md
@@ -10,10 +10,14 @@ Minutes
 •	Karin Oolu (DLM)
 •	Carl Wilson (A3, OPF)
 
+- Agenda
+1. CW will give as the info needed for reviewing the test corpus.
+2. Agreement upon the tasks in the planning document and creation of the plan
 
-- 1. Reviewing test corpus will be postponed to the next meeting, materials will be sent by Monday to everyone. CW comments work done regarding test corpus this far. Next meeting we are going to do a fake review to list of 17 structural cases. 
+- Text
+1. Reviewing test corpus will be postponed to the next meeting, materials will be sent by Monday to everyone. CW comments work done regarding test corpus this far. Next meeting we are going to do a fake review to list of 17 structural cases. 
 
-- 2. Planning of the work. Time we have left to review is 3 weeks and we have lot to do. 
+2. Planning of the work. Time we have left to review is 3 weeks and we have lot to do. 
 Review process needs to be created: introduction that can be published on web page, also create a survey etc. Work is going on with it by KB and JK.
 Discussion of tasks and work plan shared in Drive:
 CSIP – we have text updates, text about splitting, we will have a full document for the review.
