--- a/MeetingNotes/20183110.md
+++ b/MeetingNotes/20183110.md
@@ -29,4 +29,5 @@ JA Q about Norwegian review on ERMS schema. KB have set the deadline for the nex
 GEODATA – GZ comments that the document is in some shape, content is in there – can be reviewed. Gregor and KB will have separate meeting next week to discuss more detailed what we are going to have for the review.
 SIARD - we could test getting approval for endorsement, needs to be discussed with KO from Swiss Federal Archives. 
 
-- Recap: Separate meetings will be agreed with ABN and GZ. JA offers her help as she is available next week. Agenda for meeting with Manuela is set next Monday and KB will circulate what they will come up with ambition and how we need to change our focus. CSIP and RM are the most important thing and lets focus on them. Next week CW will aid us and guides us what he expects us to do. 
+- Recap: 
+Separate meetings will be agreed with ABN and GZ. JA offers her help as she is available next week. Agenda for meeting with Manuela is set next Monday and KB will circulate what they will come up with ambition and how we need to change our focus. CSIP and RM are the most important thing and lets focus on them. Next week CW will aid us and guides us what he expects us to do. 
