--- a/MeetingNotes/20180905.md
+++ b/MeetingNotes/20180905.md
@@ -14,7 +14,7 @@ Extending guests A2 E-ARK4ALL:
 •	Karin Oolu (DLM)
 •	Sebastian Gleixner (Bundesarchiv)
 •	Carl Wilson (A3, OPF)
-•	PhilipTommerholt (National Archives of Denmark)
+•	PhillipTommerholt (National Archives of Denmark)
 
 1.	Secretary of the meeting – Karin Oolu
 2.	Welcome special guests
