--- a/MeetingNotes/20181107.md
+++ b/MeetingNotes/20181107.md
@@ -1,4 +1,4 @@
-Attendees: 
+- Attendees: 
 •	Karin Bredenberg (National Archives of Sweden, chair)
 •	Anders Bo Nielsen (National Archives of Denmark)
 •	Miguel Ferreira (KEEP Solutions)
