--- a/MeetingNotes/20181107.md
+++ b/MeetingNotes/20181107.md
@@ -51,3 +51,5 @@ PT Q about profile and extended schema, is that supplementary? KB: if we are usi
 PT If we have a requirement in our CSIP then we also need to state that at least have a schema additional values are listed. Should that be as requirement or not? KB and CW will look at that. 
 
 CW will let know if there is need to look the rest of the issues. 
+
+- Notes by: Karin Oolu
