--- a/MeetingNotes/20183110.md
+++ b/MeetingNotes/20183110.md
@@ -31,3 +31,5 @@ SIARD - we could test getting approval for endorsement, needs to be discussed wi
 
 - Recap: 
 Separate meetings will be agreed with ABN and GZ. JA offers her help as she is available next week. Agenda for meeting with Manuela is set next Monday and KB will circulate what they will come up with ambition and how we need to change our focus. CSIP and RM are the most important thing and lets focus on them. Next week CW will aid us and guides us what he expects us to do. 
+
+- Notes by: Karin Oolu
