--- a/MeetingNotes/20181023.md
+++ b/MeetingNotes/20181023.md
@@ -23,3 +23,5 @@ Decision: PT will write no 4 and 12 new comment to the issue as suggestion; KB s
 KB creates special folder for geo joint document and other uploads. 
 
 - Recap: KB will mail the text where all, who are responsible, needs to update the text according to what can be reviewed by the deadline after 5 weeks. KB creates folder for things prepared for review. 
+
+- Notes by: Karin Oolu
