--- a/MeetingNotes/20181003.md
+++ b/MeetingNotes/20181003.md
@@ -53,3 +53,5 @@ ABN explains that its just to explain to people. It comes at the glossary, or ex
 
 - Sum up: ABN updates issue nr 4, KB sends one mail for each thing to make it easier to solve. 
 5. Next meeting
+
+- Notes by: Karin Oolu
