Updated with a reference to bagit
Updated with a link to bagit for further reading

--- a/MeetingNotes/20181107.md
+++ b/MeetingNotes/20181107.md
@@ -22,7 +22,7 @@ CW will update the issue.
 
 CSIPSTR3: 
 https://github.com/DILCISBoard/eark-ip-test-corpus/issues/21
-TAR is not compressed format, just an archive format. SS shares his experience and comments that it is fully compliant and it would be a good idea to build it on top of bagit? Bagit has very few requirements. Our single folder  can be directly put into the data folder of the bagit and that would be fully compliant.  
+TAR is not compressed format, just an archive format. SS shares his experience and comments that it is fully compliant and it would be a good idea to build it on top of Bagit ( https://tools.ietf.org/html/rfc8493 ). Bagit has very few requirements. Our single folder  can be directly put into the data folder of the bagit and that would be fully compliant.  
 ABN shares his experience and comments that we can do now or do it later on. This handling of segmentation is essential to running an efficient archive. That will belong to CSIP and we’ll do that after Nov, in two steps, maybe skip it until next iteration. Q here is since TAR is not a compressed format maybe we should rephrase and use: the package format.
 MF we are discussing three different things: 1. revision of the text that TAR is not compression format but archival format 2. fact that this req should be in CSIP – which I tend to agree because we don’t keep the AIP-s in the ZIP format. 3.replacing a ZIP with package? Bagit is too simple, it can hardly be considered as AIP format. There are other formats, e.g Preservica has xip, lot of competing things. 
 ABN will handle that issue.
