--- a/MeetingNotes/20181114.md
+++ b/MeetingNotes/20181114.md
@@ -15,12 +15,14 @@ Attendees:
 
 
 1.	We need to decide reviewers for the text changes made in CS IP so the changes can be inserted to the document. And time periods for review and so on (Carl will lead this part) 
+
 Work has been going on with requirements generation and and example generation from the profile, +METS profile,  its live now on the we-page. Issues going on now:  We need to make decisions 1.  What constitutes core review group to be sure the pull request is successful. 2. What’s the minimum time we keep pull request open to review 3. How long we allow to be it open to let reviewers to give the push and keep it running. 
 KA comments the logic of how DILCIS board has been set up initially, who were responsible of one or many of the E-ARK specifications. Github review process: the owner of spec plus anyone the owner nominates. How long it is open: it depends , everything down’t need to be automated. The owner of spec can look the individual pull request and decide. If you have typo of pull request or if its conseptual question, leave it open and invite people to look at it specifically. We need guidelines and we may need a label ”close quickly” or ”don’t close quickly”. 
 Agreed: New req site is live, do check the website. There are still a few broken links in specification, but they will be fixed over couple of near days. KB will present it next week meeting behalf of CW. 
 KB sends out an e-mail to everyone who are the owners of specs with responsibilities. 
 
 2.	Current status of  requirements validation (CW)
+
 We have meeting with the team after an hour, there are still some issues, but hopefully will be solved by the end of this week. 
 
 3.	Open issues regarding principles
@@ -46,12 +48,12 @@ Thanks to KA for the participation at the meeting.
 Dropped as it is just specification.
 
 4.	Moscow classification of requirements
-o	Metadata folder https://github.com/DILCISBoard/E-ARK-CSIP/issues/121
+- o	Metadata folder https://github.com/DILCISBoard/E-ARK-CSIP/issues/121
 HS comments its just purely a technical matter. We can create an empty folder but its just it.
-o	Representation folder https://github.com/DILCISBoard/E-ARK-CSIP/issues/122
-o	METS document presence https://github.com/DILCISBoard/E-ARK-CSIP/issues/123
-o	Number of METS files and representations and presence https://github.com/DILCISBoard/E-ARK-CSIP/issues/177
-o	Presence of folders in representations https://github.com/DILCISBoard/E-ARK-CSIP/issues/180
+- o	Representation folder https://github.com/DILCISBoard/E-ARK-CSIP/issues/122
+- o	METS document presence https://github.com/DILCISBoard/E-ARK-CSIP/issues/123
+- o	Number of METS files and representations and presence https://github.com/DILCISBoard/E-ARK-CSIP/issues/177
+- o	Presence of folders in representations https://github.com/DILCISBoard/E-ARK-CSIP/issues/180
  
 KB will set up an extra meeting for Moscow discussions for A3 
 
