--- a/MeetingNotes/20181114.md
+++ b/MeetingNotes/20181114.md
@@ -26,25 +26,25 @@ KB sends out an e-mail to everyone who are the owners of specs with responsibili
 We have meeting with the team after an hour, there are still some issues, but hopefully will be solved by the end of this week. 
 
 3.	Open issues regarding principles
-- o	Principle 3.4 https://github.com/DILCISBoard/E-ARK-CSIP/issues/174
+- Principle 3.4 https://github.com/DILCISBoard/E-ARK-CSIP/issues/174
 Can metadata have its own represetation - should we reword  it or keep it as it is? KA comments the original purpose, it doesn’t matter. CW comments his understanding, to be careful with wording. GZ: it could be used with geodata specific metadata and archival spedific context metadata. Discussion about many different conseptual situations and wording possibilities. If  ”in representations” put ”into representations”, not agreed because they’re conceptionally different things,  JA disagrees. PT adds: ”creation of new metada and handling of different representations”
 Agreed: PT will add new reworing for  the issue, CW and KB will check all principles in all requirements before hand them out.  
-- o	Principle 3.5 https://github.com/DILCISBoard/E-ARK-CSIP/issues/175
+- Principle 3.5 https://github.com/DILCISBoard/E-ARK-CSIP/issues/175
 We add moscow in the explanaiton and its confusing. KA comments it was intended to give more clarity, positive, negative. 
 Agreed: KB rephrases the 2nd part; ”.. must support local extensions or similar” and calls to CW if necessary
-- o	Principle 3.6 https://github.com/DILCISBoard/E-ARK-CSIP/issues/176
+- Principle 3.6 https://github.com/DILCISBoard/E-ARK-CSIP/issues/176
 Copy the last sentence to 3.5, overlapping 
-- o	Principle 3.7 https://github.com/DILCISBoard/E-ARK-CSIP/issues/178
+- Principle 3.7 https://github.com/DILCISBoard/E-ARK-CSIP/issues/178
 Problematic wording, can be understood like one package in one implementation. KA the idea is to balance longevity and interoperability, you have an xml specific and folder specific specification, CW comments that it makes me think thant i cant create different versions of my packages. But really we are talking about versions of specifications.  KB proposes that we shouldnt, must’nt implement csip in different ways in same implementation. If we use XML way we don’t introduce smth else in parallel. KA: When we do so then it means the old one is obsolete. We want to have technical and practical interoperability.
 Agreed: KB and CW will give suggestions to KA and he can say. 
 ABN asks about example, software implementation can go wrong as well.  AKG shares Norwegian experience, interoperability is complicated. We haven’t manage to receive the goals of interoperability because of many reasons, we have not included enough requirements to the processes and make it work properly. There are lot of challenges there. Maybe our structures are too complicated, database problems, versioning, our standard is too detailed, etc. KA: E-ARK specs are much better than NOARK. 
 Issue assigned to KB and CW, thanks to all for explanations
-- o	Principle 4.2 https://github.com/DILCISBoard/E-ARK-CSIP/issues/179
+- Principle 4.2 https://github.com/DILCISBoard/E-ARK-CSIP/issues/179
 What we mean by ”an umbigious use”? Discussion of different understandings of principles.  KB suggests to think about it. KA; metadata rules in CS IP must be clear, to state only one clear way how to use it.
 AKG comments that it is not so simple, we should not forget specific categories of metadata which play different roles. The principle may be right to some types but not all. 
 KA comments that the req is coming from the discussion we were having with METS, but METS offers too many alternatives how to do things, so we need to restrict it further. We say when we are implementing a new standard  in CS, then we always see that its not unambigious. As it is interoperability  requirement,  you should only propose one way of doing things, not allowed for multiple intepretations that brakes interoperability.   
 Thanks to KA for the participation at the meeting. 
-- o	Principle 4.3 https://github.com/DILCISBoard/E-ARK-CSIP/issues/181
+- Principle 4.3 https://github.com/DILCISBoard/E-ARK-CSIP/issues/181
 Dropped as it is just specification.
 
 4.	Moscow classification of requirements
