--- a/MeetingNotes/20181114.md
+++ b/MeetingNotes/20181114.md
@@ -48,13 +48,13 @@ Thanks to KA for the participation at the meeting.
 Dropped as it is just specification.
 
 4.	Moscow classification of requirements
-- o	Metadata folder https://github.com/DILCISBoard/E-ARK-CSIP/issues/121
+- Metadata folder https://github.com/DILCISBoard/E-ARK-CSIP/issues/121
 
 HS comments its just purely a technical matter. We can create an empty folder but its just it.
-- o	Representation folder https://github.com/DILCISBoard/E-ARK-CSIP/issues/122
-- o	METS document presence https://github.com/DILCISBoard/E-ARK-CSIP/issues/123
-- o	Number of METS files and representations and presence https://github.com/DILCISBoard/E-ARK-CSIP/issues/177
-- o	Presence of folders in representations https://github.com/DILCISBoard/E-ARK-CSIP/issues/180
+- Representation folder https://github.com/DILCISBoard/E-ARK-CSIP/issues/122
+- METS document presence https://github.com/DILCISBoard/E-ARK-CSIP/issues/123
+- Number of METS files and representations and presence https://github.com/DILCISBoard/E-ARK-CSIP/issues/177
+- Presence of folders in representations https://github.com/DILCISBoard/E-ARK-CSIP/issues/180
  
 KB will set up an extra meeting for Moscow discussions for A3 
 
