--- a/MeetingNotes/20181121.md
+++ b/MeetingNotes/20181121.md
@@ -11,9 +11,9 @@ Members:
 •	PhillipTommerholt (National Archives of Denmark)
 
 Agenda: 
-•	Principle 3.7, https://github.com/DILCISBoard/E-ARK-CSIP/issues/178
-•	Pull request of the principles, https://github.com/DILCISBoard/E-ARK-CSIP/pull/169  
-•	Pull request of structural requriments, https://github.com/DILCISBoard/E-ARK-CSIP/pull/209
+- •	Principle 3.7, https://github.com/DILCISBoard/E-ARK-CSIP/issues/178
+- •	Pull request of the principles, https://github.com/DILCISBoard/E-ARK-CSIP/pull/169  
+- •	Pull request of structural requriments, https://github.com/DILCISBoard/E-ARK-CSIP/pull/209
 
 Text
 •	Principle 3.7, https://github.com/DILCISBoard/E-ARK-CSIP/issues/178
