--- a/MeetingNotes/20181121.md
+++ b/MeetingNotes/20181121.md
@@ -11,12 +11,12 @@ Members:
 •	PhillipTommerholt (National Archives of Denmark)
 
 Agenda: 
-- •	Principle 3.7, https://github.com/DILCISBoard/E-ARK-CSIP/issues/178
-- •	Pull request of the principles, https://github.com/DILCISBoard/E-ARK-CSIP/pull/169  
-- •	Pull request of structural requriments, https://github.com/DILCISBoard/E-ARK-CSIP/pull/209
+- Principle 3.7, https://github.com/DILCISBoard/E-ARK-CSIP/issues/178
+- Pull request of the principles, https://github.com/DILCISBoard/E-ARK-CSIP/pull/169  
+- Pull request of structural requriments, https://github.com/DILCISBoard/E-ARK-CSIP/pull/209
 
 Text
-•	Principle 3.7, https://github.com/DILCISBoard/E-ARK-CSIP/issues/178
+- Principle 3.7, https://github.com/DILCISBoard/E-ARK-CSIP/issues/178
 Only one implementation. Solution needed as from one side this is release management, overlaying principle. KA insists to keep the req. even though it is connected with part 2 of CSIP. MF agrees with KA comment. The goal is interoperability, we can only have one implementation. Discussion. KB will rephrase the explanation under the principle: …don’t use anything else at this point of time.. 
 
 •	Pull request of the principles, https://github.com/DILCISBoard/E-ARK-CSIP/pull/169  (Click on files changed to se the suggested difference)
