--- a/MeetingNotes/20181121.md
+++ b/MeetingNotes/20181121.md
@@ -17,17 +17,19 @@ Agenda:
 
 Text
 - Principle 3.7, https://github.com/DILCISBoard/E-ARK-CSIP/issues/178
-Only one implementation. Solution needed as from one side this is release management, overlaying principle. KA insists to keep the req. even though it is connected with part 2 of CSIP. MF agrees with KA comment. The goal is interoperability, we can only have one implementation. Discussion. KB will rephrase the explanation under the principle: …don’t use anything else at this point of time.. 
+Only one implementation. Solution needed as from one side this is release management, overlaying principle. KA insists to keep the req. even though it is connected with part 2 of CSIP. MF agrees with KA comment. The goal is interoperability, we can only have one implementation. Discussion. 
 
-•	Pull request of the principles, https://github.com/DILCISBoard/E-ARK-CSIP/pull/169  (Click on files changed to se the suggested difference)
+KB will rephrase the explanation under the principle: …don’t use anything else at this point of time.. 
+
+- Pull request of the principles, https://github.com/DILCISBoard/E-ARK-CSIP/pull/169  (Click on files changed to se the suggested difference)
 Rewording of principles. KB shows the work done with principles, corrected phrasing is marked with green, old versions also seen, marked with red. KB is going through all red and green marked principles and explains modifications done. SS Q of having example of 1.2, sample of restriction. If there is a sense to put the restriction, tthere should be also a positive case. ABN we require to have all inside IP. SS in bagit you can refer to things outside of package, tools for exchanging it. What you want to exclude here, what it is that I shouldn’t do? MF its separating the package, is there anything wrong? ABN its connected to self-containment. Agreed: SS make an issue of it to be discussed after a review. 
 Going through principles continues, KB explains modifications done. Discussion. Agreed: Change principle 3.4 text to the one PT has worded.
 
-•	Pull request of structural requirements, https://github.com/DILCISBoard/E-ARK-CSIP/pull/209 
+- Pull request of structural requirements, https://github.com/DILCISBoard/E-ARK-CSIP/pull/209 
 KB is going through all red and green marked principles and explains done  modifications. CW has made some English language comments. 
 CSIPSTR12,  still open issue. Discussion of 4.2 Implementing the structure. EARK CSIP p 4.2. says we have to have METS doc in representation, simple use is prohibited. MF comments they are fine with this now. SS comments that as this is recursive, this is very easy to follow the path. In both cases you follow the branches of the tree, all will be validated. ABN is not against that principle. KB proposes to take req 12 back to should, at the same time in the explanation to be added the desire of having it always in the representation. MF explains that we are allowing two ways of doing things, still its implicit req., for convenience we allow the other way. MF proposes to get feedback from community to share the best practice. In one hand it gives flexibility, the other hand it opens a door for different implementations. KB: in swe we need to implement folder structure, must have it. That is forcing to extra mets document. KB suggests to leave as should now, and have a question in review regarding especially look at the principles and requirements for structure and also point out the number 12 one.
 
-Work is done, KB will do smaller edits, but at least one person should review that and approve changes. Agreed: to be assigned to SS, KB will let SS know if ready. 
+- Work is done, KB will do smaller edits, but at least one person should review that and approve changes. Agreed: to be assigned to SS, KB will let SS know if ready. 
 Everything is up for the review next week, except some layout with tables. ABN comments about tables, layout and structure. Discussion about that is planned for the Vienna meeting next week. 
 Update with other works, KB is working with RM, MF is in charge in SIP, plan to work further with that after meeting next week when the situation will be more stabilised. ABN we are in progress with DIP. 
 
