--- a/MeetingNotes/20181121.md
+++ b/MeetingNotes/20181121.md
@@ -31,17 +31,14 @@ Agreed: Change principle 3.4 text to the one PT has worded.
 KB is going through all red and green marked principles and explains done  modifications. CW has made some English language comments. 
 CSIPSTR12,  still open issue. Discussion of 4.2 Implementing the structure. EARK CSIP p 4.2. says we have to have METS doc in representation, simple use is prohibited. MF comments they are fine with this now. SS comments that as this is recursive, this is very easy to follow the path. In both cases you follow the branches of the tree, all will be validated. ABN is not against that principle. KB proposes to take req 12 back to should, at the same time in the explanation to be added the desire of having it always in the representation. MF explains that we are allowing two ways of doing things, still its implicit req., for convenience we allow the other way. MF proposes to get feedback from community to share the best practice. In one hand it gives flexibility, the other hand it opens a door for different implementations. KB: in swe we need to implement folder structure, must have it. That is forcing to extra mets document. 
 
-KB suggests to leave as should now, and have a question in review regarding especially look at the principles and requirements for structure and also point out the number 12 one.
-
-- Work is done, KB will do smaller edits, but at least one person should review that and approve changes. 
-
+KB suggests to leave as SHOULD now, and have a question in review regarding especially look at the principles and requirements for structure and also point out the number 12 one.
+    
+Work is done, KB will do smaller edits, but at least one person should review that and approve changes. 
 Agreed: to be assigned to SS, KB will let SS know if ready. 
 
 - Everything is up for the review next week, except some layout with tables. ABN comments about tables, layout and structure. Discussion about that is planned for the Vienna meeting next week. 
 
-- Update with other works, KB is working with RM, MF is in charge in SIP, plan to work further with that after meeting next week when the situation will be more stabilised. ABN we are in progress with DIP. 
-
-Short update about the meeting in Vienna. 
+- Update with other works: KB is working with RM, MF is in charge in SIP, plan to work further with that after meeting next week when the situation will be more stabilised. ABN we are in progress with DIP. Short update about the meeting in Vienna. 
 
 Notes: by Karin Oolu
 
